fix: masonry layout break

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,7 +65,7 @@ main {
     text-wrap: balance;
   }
   .inner {
-    @apply max-w-[600px] w-[600px] min-w-[320px] mx-auto px-lg mo:w-full;
+    @apply max-w-[600px] w-[600px] min-w-[320px] mx-auto px-lg mo:w-full overflow-y-auto overflow-x-hidden;
   }
   .drag-unable {
     -webkit-user-select: none;
